k8/hive-minikube-deployment/hive-minikube/pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: hive-all-in-one
  labels:
    app: hive
spec:
  volumes:
    - name: data-volume
      persistentVolumeClaim:
        claimName: hive-pvc
  containers:
    - name: hive-server
      image: ghcr.io/kamilkisiela/graphql-hive:latest
      command: ["pnpm", "start:server"]
      ports:
        - containerPort: 4000
    - name: hive-web
      image: ghcr.io/kamilkisiela/graphql-hive:latest
      command: ["pnpm", "start:web"]
      ports:
        - containerPort: 3000
    - name: hive-cdn
      image: ghcr.io/kamilkisiela/graphql-hive:latest
      command: ["pnpm", "start:cdn"]
      ports:
        - containerPort: 4001
    - name: hive-usage
      image: ghcr.io/kamilkisiela/graphql-hive:latest
      command: ["pnpm", "start:usage"]
      ports:
        - containerPort: 4002
    - name: hive-tokens
      image: ghcr.io/kamilkisiela/graphql-hive:latest
      command: ["pnpm", "start:tokens"]
      ports:
        - containerPort: 4003
  restartPolicy: Always
