k8/hive-minikube-deployment/hive-minikube/services.yaml

apiVersion: v1
kind: Service
metadata:
  name: hive-server
spec:
  selector:
    app: hive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: hive-web
spec:
  selector:
    app: hive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
