k8/hive-minikube-deployment/hive-minikube/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hive.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hive-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hive-web
                port:
                  number: 80
